<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_description</name>
  <version>0.0.0</version>
  <description>URDF and visualization for F1TENTH</description>
  <maintainer email="niat@todo.todo">niat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>urg_node</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>rosbridge_server</depend>
  <depend>vesc</depend>
  <depend>ackermann_mux</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Runtime Dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>geometry_msgs</depend>


  <!-- Optional testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
